@@ -1,3 +1,8 @@
+2004-04-23  Bruno Haible  <bruno@clisp.org>
+
+	Restore debuggability during loading of init.lisp.
+	* debug.d (ext_show_stack): New function.
+
 2004-04-22  Bruno Haible  <bruno@clisp.org>
 
 	Restore debuggability during loading of init.lisp.
